# playing-cards

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: _fixes.hpp.04D7A16D16AB2583.idx  _vectorize.hpp.7663E9FE0ABFE393.idx  application.cpp.6FE7FA49ABB71766.idx  application.h.27F877AA0C6D3ADF.idx  card.cpp.A03AE56A81537303.idx  card.h.AAFD7584CA55AE2A.idx  cardstack.cpp.958CA80102A5F1F1.idx  cardstack.h.138A63ED1A797848.idx  cardtypes.h.6F12C792CE398281.idx  clickable.cpp.DA43DA9C8038CC14.idx  clickable.h.EE05479FE9DF315C.idx  common.hpp.38E89189A6F4018A.idx  compute_common.hpp.33480D19B23B5675.idx  compute_vector_relational.hpp.F7015D2C8CFAB7EA.idx  constants.hpp.EB0C969B9294B3EF.idx  constants.inl.D3C92D1A10EFCCD1.idx  context.c.A256BA97B165CBAF.idx  deckstack.cpp.6F371FC2DC08DFA6.idx  deckstack.h.9BFFB8EDCFBCEDF0.idx  dual_quaternion.hpp.185B869F1D09A76A.idx  dual_quaternion.inl.35D0AE8717820005.idx  egl_context.c.E291BCE76BFF2970.idx  epsilon.hpp.66D8AA1B62C27180.idx  epsilon.inl.0CA1F0115B86948E.idx  exponential.hpp.A685F247CA291A53.idx  func_common.inl.2F29A11B3A9C4BE3.idx  func_exponential.inl.F49C0A6DC9D97480.idx  func_geometric.inl.EEDC1CCDDA96C0E5.idx  func_integer.inl.3B87DE88CCCE9F1B.idx  func_matrix.inl.1427E68FB9B6DE1E.idx  func_packing.inl.05C38EE2969B5878.idx  func_trigonometric.inl.10842786C050F2A7.idx  func_vector_relational.inl.DAA5C325071CBC17.idx  fwd.hpp.57FC6E6D03517D1F.idx  gamebase.cpp.45C7826FFAC53AA3.idx  gamebase.h.292FA9631376B171.idx  geometric.hpp.79DC002817EC1FEF.idx  glad.c.DDB4E889FF791760.idx  glad.h.79BBBE44E81D4F90.idx  (+224 more)
libs/glad/: CMakeLists.txt
src/: main.cpp
src/core/: application.cpp  application.h  logging.cpp  logging.h  transform.cpp  transform.h
src/game/: card.cpp  card.h  cardstack.cpp  cardstack.h  gamebase.h
src/input/: clickable.h  inputmanager.cpp
src/render/: renderable.cpp  renderable.h  renderer.cpp  renderer.h  shadermanager.cpp  shaderprogram.cpp  shaderprogram.h  texture.cpp  texturemanager.cpp  texturemanager.h
(+3 files in other folders)
